# urban_fractal_topology

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE_PATCH_REVIEW.md  CORRECTIONS_V040.md  CORRECTIONS_V041.md  CORRECTIONS_V043.md  GITHUB_RELEASE_PLAN.md  LICENSE  POSTPROCESSING_25M.md  POSTPROCESS_200_25M.command  README.md  RELEASE_NOTES_V041.md  RESOLUTION_SWEEP_IMPLEMENTATION.md  RUN_200_25M_EXTERNAL.md  RUN_ALL_200_25M.command  build_interactive_atlas_all200.py  pyproject.toml
batch_tools/: audit_200_25m.py  collect_city_summaries.py  download_city_catalog.py  run_city_batch.py
configs/: city_catalog_100.csv  city_catalog_200.csv
docs/: BATCH_100_CITIES.md  CITY_CATALOG_200.md  CITY_DOWNLOAD_SAFE.md  MATHEMATICAL_METHODS.md
examples/: run_local.sh  run_topology.sh
make_city_files/: boundary_osm_ids.json  count.py  download_approved_cities.py  make_city_files.py  map.py
report_tools/: make_all_reports.py  make_report.py  postprocess_200_25m.py
scripts/: download_100_cities.sh  download_200_cities.sh  postprocess_all_200_25m.sh  run_100_quick.sh  run_100_sweep.sh  run_200_final_50m.sh  run_200_quick.sh  run_200_sweep.sh  run_all_200_25m_external.sh
slurm/: README_SLURM.md  create_env.sh  finalize_reports.sbatch  resolve_boundaries_200_v042.sbatch  run_city_array.sbatch  run_city_task.py  submit_all.sh  submit_moscow.sh
tests/: conftest.py  test_batch_compatibility_v040.py  test_city_downloader.py  test_correctness_v040.py  test_fixes_v041.py  test_metrics.py  test_pipeline_synthetic.py  test_postprocess.py  test_rasterization_mode.py  test_resolution_sweep.py  test_topology.py  test_transport_solver_dtype.py
urban_fractal/: __init__.py  (+9 more)
(+12 files in other folders)
