[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-fractal"
version = "0.3.0"
description = "Multiscale fractal, lacunarity, compactness and topological analysis for urban morphology"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aleksandr Aglikov"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "matplotlib>=3.8",
    "scipy>=1.10",
]

[project.optional-dependencies]
osm = ["osmnx>=1.9"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
urban-fractal = "urban_fractal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urban_fractal*"]
