[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-fractal"
version = "0.4.1"
description = "Boundary-aware fractal, lacunarity, topology, 2.5D envelope and transport analysis for urban morphology"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Aleksandr Aglikov"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "matplotlib>=3.8",
    "scipy>=1.10",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
osm = ["osmnx>=2.1,<2.2"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
urban-fractal = "urban_fractal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urban_fractal*"]
